--- a/services/api/package.json
+++ b/services/api/package.json
@@ -14,11 +14,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@prisma/client": "^6.19.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "prisma": "^6.19.0"
+    "express-validator": "^7.3.1",
+    "prisma": "^6.19.0",
+    "resend": "^6.5.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
