--- a/services/api/package.json
+++ b/services/api/package.json
@@ -7,8 +7,11 @@
     "postinstall": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc",
+    "build": "tsc -p src/tsconfig.json",
     "start": "node dist/server.js"
+  },
+  "prisma": {
+    "seed": "ts-node --project prisma/tsconfig.json prisma/seedPromptProfiles.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +31,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/node": "^24.10.1",
+    "@types/node": "^24.10.4",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
