--- a/services/api/package.json
+++ b/services/api/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
+    "google-auth-library": "^10.5.0",
     "prisma": "^6.19.0",
     "resend": "^6.5.2"
   },
