--- a/services/api/package.json
+++ b/services/api/package.json
@@ -27,12 +27,14 @@
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "google-auth-library": "^10.5.0",
+    "jsonwebtoken": "^9.0.3",
     "prisma": "^6.19.0",
     "resend": "^6.5.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.4",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
